fix: try fix height overflow

--- a/src/components/root/styles.css
+++ b/src/components/root/styles.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: var(--tg-viewport-stable-height);
   display: flex;
   align-items: center;
   justify-content: center;
